plugins {
	id 'net.fabricmc.fabric-loom-remap' version "${loom_version}"
	id 'maven-publish'
}

version = project.mod_version
group = project.group_name

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

base {
	archivesName = "${project.mod_id}-${project.minecraft_version}"
}

// Include generated resources
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
	mavenLocal()
	maven {
		name = "ParchmentMC"
		url = "https://maven.parchmentmc.org/"
	}
	maven {
		name = "Jared's Maven" // JEI
		url = "https://maven.blamejared.com/"
	}
	maven {
		name = "Shedaniel's Maven" // REI
		url = "https://maven.shedaniel.me"
	}
	maven {
		name = "TerraformersMC" // ModMenu
		url = "https://maven.terraformersmc.com/"
	}
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
		content {
			includeGroup "maven.modrinth"
		}
	}
	maven {
		name = "Curseforge Maven"
		url = "https://www.cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	maven {
		name = "Sleeping Town"
		url = "https://repo.sleeping.town/"
	}
	maven {
		name = "Ladysnake"
		url = "https://maven.ladysnake.org/releases"
	}
	maven {
		name = "Jitpack"
		url = "https://jitpack.io"
	}
	maven {
		name = "DevOS Maven"
		url = "https://mvn.devos.one/snapshots/"
	}
}

dependencies {
	implementation "javax.annotation:javax.annotation-api:1.3.2"
	implementation "com.google.code.findbugs:jsr305:3.0.2"

	minecraft "com.mojang:minecraft:${minecraft_version}"

	mappings loom.layered {
		it.officialMojangMappings { nameSyntheticMembers = false }
		it.parchment("org.parchmentmc.data:parchment-${parchment_minecraft_version}:${parchment_version}@zip")
	}

	modImplementation "net.fabricmc:fabric-loader:${loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"

	// FIXME: Bundle the fat Porting Lib jar once it is published(cuts TF JAR size in half)
	// Porting-Lib modules (from DevOS Maven) - bundled via jar-in-jar so players don't need it as a separate dependency
	def portingLibModules = [
		"attributes",
		"base",
		"blocks",
		"brewing",
		"chunk_loading",
		"client_events",
		"client_extensions",
		"common",
		"config",
		"core",
		"data",
		"entity",
		"entity_data_serializers",
		"fluids",
		"gametest",
		"gui_utils",
		"item_abilities",
		"items",
		"level_events",
		"loot",
		"mixin_extensions",
		"model_data",
		"model_loader",
		"models",
		"obj_loader",
		"recipe_book_categories",
		"registry",
		"render_types",
		"resources",
		"tags",
		"transfer"
	]

	portingLibModules.each { module ->
		include(modImplementation "io.github.fabricators_of_create.Porting-Lib:${module}:${porting_lib_version}+${minecraft_version}")
	}

	// Compat mods

	modCompileOnly "dev.emi:trinkets:${trinkets_version}"
	// Make sure to only enable one recipe viewer at a time during testing
	modCompileOnly "mezz.jei:jei-${minecraft_version}-fabric:${jei_version}"
	modCompileOnly "me.shedaniel:RoughlyEnoughItems-fabric:${rei_version}"
	modCompileOnly "dev.emi:emi-fabric:${emi_version}+${minecraft_version}"
	// ModMenu for config screen
	modCompileOnly "com.terraformersmc:modmenu:${modmenu_version}"
	modLocalRuntime "com.terraformersmc:modmenu:${modmenu_version}"
	// Jade (nice to have in dev environment as well)
	modCompileOnly "maven.modrinth:jade:${jade_version}"
	modLocalRuntime "maven.modrinth:jade:${jade_version}"
}

fabricApi {
	configureDataGeneration {
		modId = "twilightforest"
		outputDirectory = file("src/generated/resources")
		client = true
	}
}

loom {
	accessWidenerPath = file("src/main/resources/twilightforest.classtweaker")

	runs {
		client {
			vmArg("-Dmixin.debug.export=true")
		}
	}
}

sourceSets.main.resources {
	srcDir 'src/generated/resources'
	exclude '.cache'
}

processResources {
	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	def ver = project.version
	inputs.property "version", ver

	filesMatching("fabric.mod.json") {
		expand([
			"version"             : ver,
			"loader_version"      : loader_version,
			"minecraft_version"   : minecraft_version,
			"fabric_api_version"  : fabric_api_version,
			"java_version"        : java.toolchain.languageVersion.get().asInt()
		])
	}
}

jar {
	manifest {
		attributes([
			'Specification-Title'     : mod_id,
			'Specification-Vendor'    : "TeamTwilight",
			'Specification-Version'   : "1",
			'Implementation-Title'    : project.name,
			'Implementation-Version'  : project.version,
			'Implementation-Vendor'   : "TeamTwilight",
			'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
		])
	}
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << "-Xlint:all,-classfile,-processing,-deprecation,-this-escape"
	options.encoding = 'UTF-8'
}

publishing {
	publications {
		create('mavenJava', MavenPublication) {
			from components.java
		}
	}
}